--- a/about5.html
+++ b/about5.html
@@ -45,6 +45,38 @@
 
 
     <h1>About Us Page</h1>
+<!-- <div class="row">
+    <div class="col border">1</div>
+    <div class="col border">2</div>
+    <div class="col border">3</div>
+    <div class="col border">4</div>
+    <div class="col border">5</div>
+    <div class="col border">6</div>
+    <div class="col border">7</div>
+    <div class="col border">8</div>
+    <div class="col border">9</div>
+    <div class="col border">10</div>
+    <div class="col border">11</div>
+    <div class="col border">12</div>
+</div> -->
+
+<div class="row">
+    <div class="col">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi similique fugit aliquid ab facere quae aliquam deleniti nesciunt. Voluptate distinctio illum blanditiis ullam nesciunt ipsum?
+        </p>
+    </div>
+<div class="col">
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi delectus facilis soluta. Facilis, dolores totam tempora veniam enim illo qui laboriosam beatae officiis, magni nesciunt dolore, quae nobis quibusdam perspiciatis.
+    </p>
+</div>
+
+
+
+</div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
